Fixes video autoplay

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <li>Teoria na medida certa</li>
           <li>Conteúdos extra divertidos</li>
         </ul>
-        <video autoplay loop>
+        <video autoplay muted loop>
           <source src="media/recursos.mp4" />
         </video>
       </div>
